Fix customer care deafault image source

--- a/scc-mvc/src/main/resources/templates/customercare.html
+++ b/scc-mvc/src/main/resources/templates/customercare.html
@@ -488,7 +488,7 @@
                         <input type="hidden" id="reply-token" value="">
                         <div class="dropdown">
                             <button class="btn btn-info dropdown-toggle" style="width: 180px; margin-top: 10px" type="button" data-toggle="dropdown">
-                                <img width="30px" id='reply-img'height="30px" style="border-radius: 3px" src="http://globalgamejam.org/sites/default/files/styles/game_sidebar__normal/public/game/featured_image/promo_5.png?itok=9dymM8JD" alt="user image">
+                                <img width="30px" id='reply-img'height="30px" style="border-radius: 3px" src="img/user_img.jpg" alt="user image">
                                 <p class="inline" id="reply-name"> Reply as... </p>  <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu" id="list-fb-account">
