--- a/scc-mvc/src/main/resources/templates/SideBar.html
+++ b/scc-mvc/src/main/resources/templates/SideBar.html
@@ -66,7 +66,7 @@
             </li>
             <!--Manage Ticket-->
             <li class="treeview">
-                <a href="Ticket">
+                <a href="manageticket">
                     <i class="fa fa-tasks"></i>
                     <span>Manage Ticket</span>
                     <span class="pull-right-container">
