--- a/scc-mvc/src/main/resources/templates/manageticket.html
+++ b/scc-mvc/src/main/resources/templates/manageticket.html
@@ -369,7 +369,7 @@
                 {title: "Created Time",data:"createdtime"},
                 {title: "active",data:"active",visible:false},
                 {title: "Deadline",data:"deadline"},
-                {title: "Priority", data:"statusid"},
+                {title: "Priority", data:"priority"},
                 {title: "createby", data:"createdby", visible:false },
                 {title: "assignee", data:"assignee", visible:false },
                 {title:"Action"}
