thêm giao diện cho add page to crawl

--- a/scc-mvc/src/main/resources/templates/SideBar.html
+++ b/scc-mvc/src/main/resources/templates/SideBar.html
@@ -54,6 +54,16 @@
                     </span>
                 </a>
             </li>
+            <!--Manage Page -->
+            <li class="treeview">
+                <a href="/crawl-page/index">
+                    <i class="fa fa-file-o"></i>
+                    <span>Manage Crawl Page</span>
+                    <span class="pull-right-container">
+                            <i class="fa fa-angle-left pull-right"></i>
+                    </span>
+                </a>
+            </li>
             <!--Manage FaceBook Account -->
             <li class="treeview">
                 <a href="/facebook-account/index">
