Update front end for Thiện's function
Just front end

--- a/scc-mvc/src/main/resources/templates/SideBar.html
+++ b/scc-mvc/src/main/resources/templates/SideBar.html
@@ -10,21 +10,23 @@
         <!-- /.search form -->
         <!-- sidebar menu: : style can be found in sidebar.less -->
         <ul class="sidebar-menu">
-            <!--Manage User -->
-            <li class="treeview">
-                <a href="#">
-                    <i class="fa fa-user"></i>
-                    <span>Manage User</span>
-                    <span class="pull-right-container">
-                            <i class="fa fa-angle-left pull-right"></i>
-                    </span>
-                </a>
-                <ul class="treeview-menu">
-                    <li><a href="index.html"><i class="fa fa-circle-o"></i> Profile </a></li>
-                    <li><a href="index2.html"><i class="fa fa-circle-o"></i>FB Account</a></li>
-                </ul>
-            </li>
+
+            <!--&lt;!&ndash;Manage User &ndash;&gt;-->
+            <!--<li class="treeview">-->
+                <!--<a href="#">-->
+                    <!--<i class="fa fa-user"></i>-->
+                    <!--<span>Manage User</span>-->
+                    <!--<span class="pull-right-container">-->
+                            <!--<i class="fa fa-angle-left pull-right"></i>-->
+                    <!--</span>-->
+                <!--</a>-->
+                <!--<ul class="treeview-menu">-->
+                    <!--<li><a href="index.html"><i class="fa fa-circle-o"></i> Profile </a></li>-->
+                    <!--<li><a href="index2.html"><i class="fa fa-circle-o"></i>FB Account</a></li>-->
+                <!--</ul>-->
+            <!--</li>-->
             <!--Customer Care -->
+            <li class="header" style="text-align: center">CUSTOMER CARE SERVICE</li>
             <li class="treeview">
                 <a href="/customercare">
                     <i class="fa fa-ambulance"></i>
@@ -34,21 +36,23 @@
                     </span>
                 </a>
             </li>
-            <!--Manage Brand -->
+            <!--Manage Ticket-->
             <li class="treeview">
-                <a href="#">
-                    <i class="fa fa-globe"></i>
-                    <span>Manage Brand</span>
+                <a href="/manageticket">
+                    <i class="fa fa-tasks"></i>
+                    <span>Manage Ticket</span>
                     <span class="pull-right-container">
                             <i class="fa fa-angle-left pull-right"></i>
                     </span>
                 </a>
             </li>
+
+            <li class="header" style="text-align: center">PAGE AND ACCOUNT</li>
             <!--Manage Page -->
             <li class="treeview">
                 <a href="/page/index">
-                    <i class="fa fa-file-o"></i>
-                    <span>Manage Page</span>
+                    <i class="fa fa-facebook-official "></i>
+                    <span>Manage Page Account</span>
                     <span class="pull-right-container">
                             <i class="fa fa-angle-left pull-right"></i>
                     </span>
@@ -57,10 +61,10 @@
             <!--Manage Page -->
             <li class="treeview">
                 <a href="/crawl-page/index">
-                    <i class="fa fa-file-o"></i>
+                    <i class="fa fa-bug"></i>
                     <span>Manage Crawl Page</span>
                     <span class="pull-right-container">
-                            <i class="fa fa-angle-left pull-right"></i>
+      <i class="fa fa-angle-left pull-right"></i>
                     </span>
                 </a>
             </li>
@@ -74,11 +78,15 @@
                     </span>
                 </a>
             </li>
-            <!--Manage Ticket-->
+
+
+
+            <li class="header" style="text-align: center">BRAND INFORMATION</li>
+            <!--Manage Brand -->
             <li class="treeview">
-                <a href="manageticket">
-                    <i class="fa fa-tasks"></i>
-                    <span>Manage Ticket</span>
+                <a href="#">
+                    <i class="fa fa-globe"></i>
+                    <span>Manage Brand</span>
                     <span class="pull-right-container">
                             <i class="fa fa-angle-left pull-right"></i>
                     </span>
