--- a/scc-mvc/src/main/resources/templates/page/create.html
+++ b/scc-mvc/src/main/resources/templates/page/create.html
@@ -13,9 +13,8 @@
 
     <div class="content-wrapper">
 
-
         <section class="content">
-            <div>
+            <div style="margin-top: 10px;margin-bottom: 10px;margin-left: 10px; background-color: white; padding: 10px 20px 20px 20px">
                 <div>
                     <form id="form" action="processPageAccessToken" method="post">
                         <input type="hidden" name="pageAccessToken" id="pageAccessToken" value=""/>
@@ -26,6 +25,7 @@
                     <div id="here_table"></div>
 
                     <div id="fbLoginButton" style="visibility: hidden">
+
                         <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
                         </fb:login-button>
                     </div>
