--- a/scc-mvc/src/main/resources/templates/SideBar.html
+++ b/scc-mvc/src/main/resources/templates/SideBar.html
@@ -3,12 +3,17 @@
 <aside class="main-sidebar" >
     <!-- sidebar: style can be found in sidebar.less -->
     <section class="sidebar">
-        <!-- Sidebar user panel -->
-
+        <div class="user-panel">
+            <div class="pull-left image">
+                <img id="brand-logo" style=" border:1px solid gray; border-radius: 0px"src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/p/4/000/172/184/2608ece.jpg" class="img-circle" alt="User Image">
+            </div>
+            <div class="pull-left info">
+                <p id="brand-name">thegioididong</p>
+                <a id="brand-sologan">Lắng nghe và chia sẻ</a>
+            </div>
+        </div>
         <!-- search form -->
 
-        <!-- /.search form -->
-        <!-- sidebar menu: : style can be found in sidebar.less -->
         <ul class="sidebar-menu">
 
             <!--&lt;!&ndash;Manage User &ndash;&gt;-->
